<resources>
    <string name="app_name">University Labster</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- Strings for the main menu action bar -->
    <string name="action_settings">Settings</string>

    <!-- Strings for main drawer menu -->
    <string name="profile">Profile</string>
    <string name="courses">Courses</string>
    <string name="pending_courses">Pending Courses</string>
    <string name="timetable">Timetable</string>
    <string name="facilities">Facilities</string>
    <string name="sign_out">Sign Out</string>


    <!-- Strings representing main data -->
    <string name="course">Course</string>
    <string name="laboratory">Laboratory</string>
    <string name="seminary">Seminary</string>

    <!-- Strings used for facebook/google login -->
    <string name="facebook_app_id">1749747468378299</string>
    <string name="fb_login_protocol_scheme">fb1749747468378299</string>
    <string name="continue_with_facebook">Facebook</string>
    <string name="continue_with_goole">Google</string>

    <!-- Strings to label the activities -->
    <string name="title_activity_register">Sign up</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to registration and login-->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password - more than 6 characters</string>
    <string name="register">REGISTER</string>
    <string name="already_registered_sign_in_here">Already Registered? Sign in here.</string>
    <string name="go_to_sign_up">Not having a account ? Sign up here.</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="faculty">Faculty</string>
    <string name="section">Section</string>
    <string name="year_of_college">Year of College</string>
    <string name="save_data">Save Data</string>
    <string name="fill_the_boxes_to_proceed">Fill the boxes to proceed:</string>
    <string name="login">LOGIN</string>
    <string name="logo">Logo</string>
    <string name="continue_with">Continue with:</string>

    <!--Strings for the course activities and fragments-->
    <string name="tool_tip_course_name">Click me for extra info about the course!</string>
    <string name="check_in">Check in</string>
    <string name="send_message_here">send message here</string>
    <string name="refresh">Refresh</string>
    <string name="show_extra_data">Show extra data</string>
    <string name="show_location">Show location</string>
    <string name="add_course">Add Course</string>
    <string name="number_of_schedules">Number of schedules</string>
    <string name="number_of_professors">Number of professors</string>
    <string name="type_course_seminary_laboratory">Type(Course/Seminary/Laboratory)</string>
    <string name="year">Year</string>
    <string name="course_name">Course Name</string>
    <string name="location">Location</string>
    <string name="continue_btn">Continue</string>
    <string name="save_course">Save Course</string>
    <string name="add_proffesor">Professor</string>
    <string name="professor_name">Professor Name</string>
    <string name="professor_email">Professor Email</string>
    <string name="first_appereance_date">First appereance date (of type: dd/MM/yyyy)</string>
    <string name="start_time">Start time</string>
    <string name="end_time">End time</string>
    <string name="number_of_apparitions">Number of apparitions</string>
    <string name="add_schedule">Schedule</string>
    <string name="click_me_to_validate">Click me to validate!</string>
    <string name="add_to_calendar">Add to Calendar</string>


    <!-- Strings for the profile -->
    <string name="profile_name">Name</string>
    <string name="profile_email">Email</string>
    <string name="profile_faculty">Faculty</string>
    <string name="profile_section">Section</string>
    <string name="profile_year">Year</string>
    <string name="profile_label">Profile</string>

   <!-- String for the timetable -->
    <string name="timetable_title">Timetable</string>
    <string name="day">Day</string>
    <string name="_08_00_10_00">08:00 - 10:00</string>
    <string name="_10_00_12_00">10:00 - 12:00</string>
    <string name="_12_00_14_00">12:00 - 14:00</string>
    <string name="_14_00_16_00">14:00 - 16:00</string>
    <string name="_16_00_18_00">16:00 - 18:00</string>
    <string name="_18_00_20_00">18:00 - 20:00</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>


</resources>
