<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

       <item
           android:id="@+id/nav_profile"
           android:icon="@drawable/profile"
           android:title="@string/profile" />
       <item
           android:id="@+id/nav_courses"
           android:icon="@drawable/courses"
           android:title="@string/courses" />

        <item
            android:id="@+id/nav_pending_courses"
            android:icon="@drawable/pending_courses"
            android:title="@string/pending_courses" />
        <item
            android:id="@+id/nav_timetable"
            android:icon="@drawable/timetable"
            android:title="@string/timetable" />
    </group>


    <item android:title="@string/facilities">
        <menu>
            <item
                android:id="@+id/nav_sign_out"
                android:icon="@drawable/sign_out"
                android:title="@string/sign_out" />
        </menu>
    </item>

</menu>
