<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/course_refresh"
        android:title="@string/refresh"
        app:showAsAction="ifRoom"
        android:icon="@drawable/refresh"
        android:orderInCategory="90"
        />


    <item
        android:id="@+id/course_switch_data"
        android:title="@string/show_extra_data"
        app:showAsAction="ifRoom"
        android:icon="@drawable/switch_extra_data"
        android:orderInCategory="100"
        />

    <item
        android:id="@+id/course_show_location"
        android:title="@string/show_location"
        app:showAsAction="ifRoom"
        android:icon="@drawable/location"
        android:orderInCategory="110"
        />

</menu>