<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <LinearLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent">


        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >


            <LinearLayout
                android:layout_margin="@dimen/activity_vertical_margin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent">

                <TableLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:stretchColumns="1,2,3,4,5,6"
                    android:layout_marginEnd="32dp"
                    >

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_span="7"
                            android:background="@drawable/table_title_shape"
                            android:gravity="center_horizontal"
                            android:padding="8dp"
                            android:text="@string/timetable_title"
                            android:textColor="#DEEEEE"
                            android:textSize="40sp"
                            android:textStyle="bold|italic" />
                    </TableRow>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="2dp"
                        android:background="#FF909090" />

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/day"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/_08_00_10_00"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/_10_00_12_00"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/_12_00_14_00"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/_14_00_16_00"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/_16_00_18_00"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/_18_00_20_00"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/trMonday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/monday"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/trTuesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                       >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/tuesday"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/trWednesday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/wednesday"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/trThursday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/thursday"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                    </TableRow>

                    <TableRow
                        android:id="@+id/trFriday"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@drawable/table_exterior_cell_shape"
                            android:padding="8dp"
                            android:text="@string/friday"
                            android:textAlignment="center"
                            android:textColor="#DEEEEE"
                            android:textSize="35sp"
                            android:textStyle="italic" />

                    </TableRow>

                </TableLayout>

            </LinearLayout>

        </HorizontalScrollView>


    </LinearLayout>
</ScrollView>

